manifests/ntfy/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/instance: ntfy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/instance: ntfy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: metrics
