manifests/ntfy/resources/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ntfy.vrsf.in`)
      kind: Rule
      services:
        - name: ntfy
          port: 80
  tls:
    certResolver: letsencrypt
